docs: require creating .env from template; add REDIS_URL/SECRET_KEY and clarify in-app API key option

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,11 @@
 # Transcript Analysis Tool - Environment Variables Template
 # Copy this file to .env and fill in your actual values
 
-# OpenAI Configuration for GPT-5
-OPENAI_API_KEY=your-gpt5-api-key-here
-OPENAI_MODEL=gpt-5
-OPENAI_API_BASE=https://api.openai.com/v1  # Update if using a different endpoint for GPT-5
+# OpenAI Configuration
+# If you don't set this here, you can set a per-user key in the web app header.
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_API_BASE=https://api.openai.com/v1
 
 # Alternative LLM Providers (optional)
 ANTHROPIC_API_KEY=
@@ -41,3 +42,9 @@ TRANSCRIPT_ANALYZER_STAGE_B_INCLUDE_TRANSCRIPT=false
 TRANSCRIPT_ANALYZER_STAGE_B_TRANSCRIPT_MODE=summary
 # Max characters of transcript to include (applies to full/summary/windowed)
 TRANSCRIPT_ANALYZER_STAGE_B_TRANSCRIPT_MAX_CHARS=20000
+
+# Web/Server
+# Secret for Flask sessions in production (auto-falls back if unset)
+SECRET_KEY=
+# Redis URL (Docker compose provides redis://redis:6379; for local dev use localhost)
+REDIS_URL=redis://localhost:6379
