feat(config): default OPENAI_MODEL to gpt-5-nano across app; use Responses API path for all stages by default
Update defaults in src/config.py, docker-compose.yml, and .env.template. Refresh docs to reflect gpt-5-nano as default model.

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@
 # OpenAI Configuration
 # If you don't set this here, you can set a per-user key in the web app header.
 OPENAI_API_KEY=
-OPENAI_MODEL=gpt-4o-mini
+OPENAI_MODEL=gpt-5-nano
 OPENAI_API_BASE=https://api.openai.com/v1
 
 # Alternative LLM Providers (optional)
